working on fixing overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 body,
 ul,
 li,
@@ -7,17 +12,19 @@ a {
 	margin: 0;
 	padding: 0;
 	font-family: arial;
+	box-sizing: border-box;
 }
 
 header {
 	background-color: #f63232;
-	padding: 20px;
+	padding: 20px 0;
 	text-align: center;
 	position: fixed;
 	width: 100%;
 	z-index: 1;
 	top: 0;
 	left: 0;
+	margin: 0;
 }
 header h1 {
 	color: white;
